# r2midi

./: .gitignore  .local_build_env  BULLETPROOF_SIGNING_SOLUTION.md  CERTIFICATE_SETUP_REPORT.md  CERTIFICATE_USAGE_SUMMARY.md  CHANGELOG.md  CLAUDE.md  FIXED_XATTR_ISSUE.md  GITHUB_ACTIONS_SIGNING_FIX.md  GITHUB_README.md  INSTALLER_IDENTITY_FIX_SUMMARY.md  LOCAL_PKG_TESTING.md  MACOS_PKG_SIGNING_GUIDE.md  MACOS_SIGNING_SOLUTION.md  PKG_STORAGE_GUIDE.md  QUICK_START.md  README.md  SELF_HOSTED_IMPLEMENTATION_SUMMARY.md  SELF_HOSTED_RUNNER_SETUP.md  SIGNING_ANALYSIS_SUMMARY.md  SIGNING_FIX_DOCUMENTATION.md  SIGNING_SOLUTION_GUIDE.sh  SIMPLIFIED_BUILD_SYSTEM.md  SUMMARY_LOCAL_PKG_TESTING.md  UNIFIED_CERTIFICATE_SETUP.md  VALIDATION_RESULTS.md  WORKFLOW_FIXES_SUMMARY.md  __init__.py  analysis_scripts_usage.md  analysis_sign_notarize_separation.md  briefcase_package_explanation.md  build-all-local.sh  build-client-local.sh  build-pkg.py  build-server-local.sh  build_environment_report.txt  build_environment_setup.txt  check-build-error.sh  circular_dependency_fix_summary.md  clean-build.sh.delete  (+79 more)
.github/: QT6_CONFLICT_RESOLUTION.md  QT6_FIXES_SUMMARY.md  README.md  SCRIPTS_REFACTORING_SUMMARY.md  SERVER_BUILD_FIXES_COMPLETE.md
.github/scripts/: CLEANUP_SUMMARY.md  README.md  app-cleaner.sh  build-briefcase-apps.sh  build-client-app-isolated.sh  build-client-app.sh  build-macos-ci.sh  build-macos-clean-environment.sh  build-macos-configure.sh  build-macos-setup-python.sh  build-macos-setup-venv.sh  build-macos-test-venv.sh  build-native-client-app.sh  build-native-server-app.sh  build-python-package.sh  build-server-app-isolated.sh  build-server-app.sh  clean-app.sh  cleanup-build.sh  codesign.sh  configure-build.sh  create-build-report.sh  create-dmg-installers.sh  create-macos-dmg-fallback.sh  create-macos-pkg.sh  create-native-build-report.sh  create-native-dmg-installers.sh  create-native-pkg-installers.sh  create-packages.sh  create-pkg-installers.sh  debug-server-dependencies.sh  detect-runner-environment.sh  detect-runner.sh  emergency-clean-app.sh  extract-version-from-pyproject.sh  extract-version.sh  fix-entitlements.sh  fixed-cert-test.sh  generate-build-summary.sh  handle-attributes.sh  (+40 more)
.github/scripts/modules/: build-utils.sh  certificate-manager.sh  deep-clean-utils.sh  logging-utils.sh
.github/workflows/: build-linux.yml  build-macos-pkg-builder.yml  build-macos.yml  build-unified.yml  build-windows.yml  build.yml  ci.yml  release.yml
artifacts/: PACKAGE_MANIFEST.txt
build_client/: setup.py
build_client/r2midi_client/: requirements.txt
build_server/: setup.py  setup.py.bak
build_server/server/: main.py  midi_utils.py  pyproject.toml  requirements.txt
build_v2_1751256548/R2MIDI Server.app/Contents/MacOS/: R2MIDI Server
build_v2_1751256548/install_root_v2/opt/r2midi/R2MIDI Server.app/Contents/: Info.plist
build_v2_1751256548/scripts/: postinstall
build_v2_1751256568/R2MIDI Client.app/Contents/MacOS/: R2MIDI Client
build_v2_1751256568/R2MIDI Client.app/Contents/_CodeSignature/: CodeRequirements
build_v2_1751256568/install_root_v2/opt/r2midi/R2MIDI Client.app/Contents/: Info.plist
build_v2_1751256568/install_root_v2/opt/r2midi/R2MIDI Client.app/Contents/_CodeSignature/: CodeDirectory  CodeRequirements-1  CodeResources
build_v2_1751256568/scripts/: postinstall
docs/: SELF_HOSTED_RUNNER_SETUP.md
hooks/: post_build.py
r2midi_client/: pyproject.toml  requirements.txt
scripts/: README.md  apply_fix.sh  build-local-with-pkg-builder.sh  build-pkg-with-macos-builder.py  build-pkg-with-macos-builder.sh  bulletproof_clean_app_bundle.py  check-runner-environment.sh  clean-app-bundles.sh  cleanup.sh  common-certificate-setup.sh  configure_briefcase_signing.py  fix_macos_signing.py  fix_macos_signing_issue.py  install_dependencies.sh  keychain-free-build.sh  make_all_executable.sh  make_executable.sh  quick-test-build.sh  quick-test-pkg-builder.sh  quick_macos_setup.sh  quick_start.sh  run_secrets_manager.sh  secure-certificate-manager.py  security_scan.py  select_entitlements.py  setup-macos-pkg-builder.sh  setup_complete_github_secrets.sh  setup_github_secrets.py  setup_secrets.sh  test-fixed-build.sh  test-new-build-process.sh  test-runner-compatibility.sh  test_encryption_fix.py  test_github_setup.py  test_pkg_build_locally.sh  test_setup.sh
server/: main.py  pyproject.toml  requirements.txt  version.py
temp_test/: fix_permissions.py  make_executable.sh
tests/unit/r2midi_client/: test_api_client.py  test_models.py
tests/unit/server/: test_device_manager.py  test_main.py  test_midi_utils.py  test_models.py  test_ui_launcher.py
