[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "r2midi-client"
version = "0.1.192"
description = "MIDI 2.0 Patch Selection Client UI"
authors = [
    {name = "R2MIDI Team", email = "tiran@tirans.com"}
]
readme = "../README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "httpx==0.28.1",
    "psutil==7.0.0",
    "PyQt6==6.9.1",
    "pyqt6-sip==13.10.2",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.0",
    "pytest-asyncio==0.25.0",
]
dev = [
    "briefcase>=0.3.21",
    "black>=24.8.0",
    "flake8>=7.0.0",
]

[project.urls]
"Homepage" = "https://github.com/tirans/r2midi"
"Bug Tracker" = "https://github.com/tirans/r2midi/issues"

[tool.setuptools]
packages = ["."]

# ========================================
# Briefcase Configuration
# ========================================

[tool.briefcase]
project_name = "R2MIDI Client"
bundle = "com.r2midi.client"
version = "0.1.192"
url = "https://github.com/tirans/r2midi"
license = {text = "MIT"}
author = "R2MIDI Team"
author_email = "tiran@tirans.com"

[tool.briefcase.app.r2midi-client]
formal_name = "R2MIDI Client"
description = "MIDI 2.0 Patch Selection Client UI"
long_description = """R2MIDI Client is a user interface for managing and selecting MIDI presets across various devices and manufacturers."""
icon = "../resources/r2midi"

sources = [
    ".",
]

test_sources = ["../tests/unit/r2midi_client"]

requires = [
    "httpx==0.28.1",
    "psutil==7.0.0",
    "PyQt6==6.9.1",
    "pyqt6-sip==13.10.2",
]

# Define entry point for the client app
startup_module = "main"
startup_method = "main"

# ========================================
# macOS Configuration
# ========================================
[tool.briefcase.app.r2midi-client.macOS]
requires = [
    "httpx==0.28.1",
    "psutil==7.0.0",
    "PyQt6==6.9.1",
    "pyqt6-sip==13.10.2",
    "std-nslog",
]

# macOS specific settings
codesign_identity = "Developer ID Application: Tiran Efrat (79449BGAM5)"
entitlements_file = "../entitlements.plist"
packaging_format = "dmg,pkg"
sign_app = true

# ========================================
# Windows Configuration
# ========================================
[tool.briefcase.app.r2midi-client.windows]
requires = [
    "httpx==0.28.1",
    "psutil==7.0.0",
    "PyQt6==6.9.1",
    "pyqt6-sip==13.10.2",
]
sign_app = false

# ========================================
# Linux Configuration
# ========================================
[tool.briefcase.app.r2midi-client.linux]
requires = [
    "httpx==0.28.1",
    "psutil==7.0.0",
    "PyQt6==6.9.1",
    "pyqt6-sip==13.10.2",
]
target = "system"

# ========================================
# Development Configuration
# ========================================
[tool.briefcase.app.r2midi-client.dev]
debug = true
console_app = false