[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "r2midi-server"
version = "0.1.192"
description = "MIDI 2.0 Patch Selection Server API"
authors = [
    {name = "R2MIDI Team", email = "tiran@tirans.com"}
]
readme = "../README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "pydantic==2.11.7",
    "python-dotenv==1.1.0",
    "python-rtmidi>=1.5.5",
    "uvicorn==0.34.3",
    "gitpython==3.1.40",
    "httpx==0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.0",
]
dev = [
    "briefcase>=0.3.21",
    "black>=24.8.0",
    "flake8>=7.0.0",
]

[project.urls]
"Homepage" = "https://github.com/tirans/r2midi"
"Bug Tracker" = "https://github.com/tirans/r2midi/issues"

[tool.setuptools]
packages = ["."]

# ========================================
# Briefcase Configuration
# ========================================

[tool.briefcase]
project_name = "R2MIDI Server"
bundle = "com.r2midi.server"
version = "0.1.192"
url = "https://github.com/tirans/r2midi"
license = {text = "MIT"}
author = "R2MIDI Team"
author_email = "tiran@tirans.com"

[tool.briefcase.app.server]
formal_name = "R2MIDI Server"
description = "MIDI 2.0 Patch Selection Server API"
long_description = """R2MIDI Server is a REST API for managing and selecting MIDI presets across various devices and manufacturers."""
icon = "../resources/r2midi"

sources = [
    ".",
]

# Exclude directories that should not be included in the build
excludes = [
    "midi-presets",
    "logs",
]

test_sources = ["../tests/unit/server"]

requires = [
    "fastapi==0.115.12",
    "pydantic==2.11.7",
    "python-dotenv==1.1.0",
    "python-rtmidi>=1.5.5",
    "uvicorn==0.34.3",
    "gitpython==3.1.40",
    "httpx==0.28.1",
]

# Define entry point for the server app
startup_module = "main"
startup_method = "main"

# ========================================
# macOS Configuration
# ========================================
[tool.briefcase.app.server.macOS]
requires = [
    "fastapi==0.115.12",
    "pydantic==2.11.7",
    "python-dotenv==1.1.0",
    "python-rtmidi>=1.5.5",
    "uvicorn==0.34.3",
    "gitpython==3.1.40",
    "httpx==0.28.1",
    "std-nslog",
]

# macOS specific settings
codesign_identity = "Developer ID Application: Tiran Efrat (79449BGAM5)"
entitlements_file = "../entitlements.plist"
packaging_format = "dmg,pkg"
sign_app = true

# ========================================
# Windows Configuration
# ========================================
[tool.briefcase.app.server.windows]
requires = [
    "fastapi==0.115.12",
    "pydantic==2.11.7",
    "python-dotenv==1.1.0",
    "python-rtmidi>=1.5.5",
    "uvicorn==0.34.3",
    "gitpython==3.1.40",
    "httpx==0.28.1",
]
sign_app = false

# ========================================
# Linux Configuration
# ========================================
[tool.briefcase.app.server.linux]
requires = [
    "fastapi==0.115.12",
    "pydantic==2.11.7",
    "python-dotenv==1.1.0",
    "python-rtmidi>=1.5.5",
    "uvicorn==0.34.3",
    "gitpython==3.1.40",
    "httpx==0.28.1",
]
target = "system"

# ========================================
# Development Configuration
# ========================================
[tool.briefcase.app.server.dev]
debug = true
console_app = true
